# gen/http/master/server/paths.go
@@ -1,0 +1,17 @@
+// Code generated by goa v3.23.1, DO NOT EDIT.
+//
+// HTTP request path constructors for the master service.
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package server
+
+import (
+	"fmt"
+)
+
+// GetStockMasterPath returns the URL path to the master service get_stock HTTP endpoint.
+func GetStockMasterPath(symbol string) string {
+	return fmt.Sprintf("/master/stocks/%v", symbol)
+}
