# gen/http/position/server/encode_decode.go
@@ -1,0 +1,74 @@
+// Code generated by goa v3.23.1, DO NOT EDIT.
+//
+// position HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package server
+
+import (
+	"context"
+	"net/http"
+	position "stock-bot/gen/position"
+	positionviews "stock-bot/gen/position/views"
+
+	goahttp "goa.design/goa/v3/http"
+	goa "goa.design/goa/v3/pkg"
+)
+
+// EncodeListResponse returns an encoder for responses returned by the position
+// list endpoint.
+func EncodeListResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res := v.(*positionviews.StockbotPositionCollection)
+		enc := encoder(ctx, w)
+		body := NewListResponseBody(res.Projected)
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeListRequest returns a decoder for requests sent to the position list
+// endpoint.
+func DecodeListRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (*position.ListPayload, error) {
+	return func(r *http.Request) (*position.ListPayload, error) {
+		var (
+			type_ string
+			err   error
+		)
+		type_Raw := r.URL.Query().Get("type")
+		if type_Raw != "" {
+			type_ = type_Raw
+		} else {
+			type_ = "all"
+		}
+		if !(type_ == "all" || type_ == "cash" || type_ == "margin") {
+			err = goa.MergeErrors(err, goa.InvalidEnumValueError("type", type_, []any{"all", "cash", "margin"}))
+		}
+		if err != nil {
+			return nil, err
+		}
+		payload := NewListPayload(type_)
+
+		return payload, nil
+	}
+}
+
+// marshalPositionviewsPositionResultViewToPositionResultResponseBody builds a
+// value of type *PositionResultResponseBody from a value of type
+// *positionviews.PositionResultView.
+func marshalPositionviewsPositionResultViewToPositionResultResponseBody(v *positionviews.PositionResultView) *PositionResultResponseBody {
+	res := &PositionResultResponseBody{
+		Symbol:           *v.Symbol,
+		PositionType:     *v.PositionType,
+		Quantity:         *v.Quantity,
+		AverageCost:      *v.AverageCost,
+		CurrentPrice:     v.CurrentPrice,
+		UnrealizedPl:     v.UnrealizedPl,
+		UnrealizedPlRate: v.UnrealizedPlRate,
+		OpenedDate:       v.OpenedDate,
+	}
+
+	return res
+}
