# gen/master/endpoints.go
@@ -1,0 +1,45 @@
+// Code generated by goa v3.23.1, DO NOT EDIT.
+//
+// master endpoints
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package master
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "master" service endpoints.
+type Endpoints struct {
+	GetStock goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "master" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		GetStock: NewGetStockEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "master" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.GetStock = m(e.GetStock)
+}
+
+// NewGetStockEndpoint returns an endpoint function that calls the method
+// "get_stock" of service "master".
+func NewGetStockEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*GetStockPayload)
+		res, err := s.GetStock(ctx, p)
+		if err != nil {
+			return nil, err
+		}
+		vres := NewViewedStockbotStockMaster(res, "default")
+		return vres, nil
+	}
+}
